# Agent-with-MCP-connection

./: .gitignore  README.md  conf.json  llm_config.py  main.py  mcp_server.py  pyproject.toml
