[project]
name = "08-mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain-openai>=0.3.17",
    "mcp[cli]>=1.9.0",
    "requests>=2.32.3",
    "langchain>=0.1.16",
    "langchain-mcp-adapters>=0.1.1",
]
